# omnizart

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cog.yaml  colab.ipynb  environment.yaml  environment.yml  paper.bib  paper.md  predict.py  pyproject.toml  requirements.txt  setup.py
.config/: flake  pylintrc  yapf.style
.github/workflows/: doc-build.yml  general.yml  publish.yml  test-publish-docker.yml
docs/: Makefile
docs/source/: add-new-modules.rst  base.rst  chord.rst  cli.rst  conf.py  constants.rst  demo.rst  drum.rst  feature.rst  index.rst  io_utils.rst  models.rst  modules.rst  music.rst  omnizart.cli.cli.rst  omnizart.cli.drum.rst  omnizart.cli.music.evaluate.rst  omnizart.cli.music.generate_feature.rst  omnizart.cli.music.rst  omnizart.cli.music.train_model.rst  omnizart.cli.music.transcribe.rst  omnizart.cli.rst  omnizart.constants.datasets.rst  omnizart.constants.feature.rst  omnizart.constants.midi.rst  omnizart.constants.rst  omnizart.feature.cfp.rst  omnizart.feature.cqt.rst  omnizart.feature.hcfp.rst  omnizart.feature.rst  omnizart.io_utils.rst  omnizart.models.rst  omnizart.models.u_net.rst  omnizart.music.inference.rst  omnizart.music.losses.rst  omnizart.music.model_manager.rst  omnizart.music.rst  omnizart.music.utils.rst  omnizart.rst  quick-start.rst  (+6 more)
docs/source/_static/: demo-collage.html  demo-cosmo.html  demo-dreamshade.html  demo-stardust.html  demo-surrealist.html
docs/source/beat/: api.rst  cli.rst
docs/source/chord/: api.rst  cli.rst
docs/source/cli/: index.rst  music.rst
docs/source/drum/: api.rst  cli.rst
docs/source/music/: api.rst  cli.rst
docs/source/patch-cnn/: api.rst  cli.rst
docs/source/vocal/: api.rst  cli.rst
docs/source/vocal-contour/: api.rst  cli.rst
figures/: Thumbs.db
omnizart/: __init__.py  base.py  callbacks.py  io.py  io_utils.py  remote.py  setting_loaders.py  train.py  transcribe_all.py  utils.py
omnizart/beat/: __init__.py  app.py  features.py  inference.py  prediction.py
omnizart/checkpoints/patch_cnn/: configurations.yaml
omnizart/chord/: __init__.py  app.py  app_2.py  dataset.py  features.py  features_2.py  inference.py  inference_2.py  test.py
omnizart/cli/: __init__.py  cli.py  common_options.py  transcribe.py
omnizart/cli/beat/: __init__.py  generate_feature.py  train_model.py  transcribe.py
omnizart/cli/chord/: __init__.py  generate_feature.py  train_model.py  transcribe.py
omnizart/constants/: __init__.py  datasets.py  feature.py  midi.py
omnizart/defaults/: beat.yaml  chord.yaml  chord_2.yaml  drum.yaml  music.yaml  patch_cnn.yaml  vocal.yaml  vocal_contour.yaml  vocal_frame.yaml
omnizart/drum/: __init__.py  app.py  dataset.py  inference.py  labels.py  patched_cqt.py  prediction.py  utils.py
omnizart/feature/: __init__.py  beat_for_drum.py  cfp.py  chroma.py  cqt.py  hcfp.py  wrapper_func.py
omnizart/legacy/: setting_loaders.py
omnizart/models/: __init__.py  chord_model.py  patch_cnn.py  pyramid_net.py  rnn.py  spectral_norm_net.py  t2t.py  u_net.py  utils.py  vocalframe_model_tf.py
omnizart/music/: LabelType.py  __init__.py  app.py  dataset.py  inference.py  labels.py  losses.py  model_manager.py  prediction.py  utils.py
omnizart/patch_cnn/: __init__.py  app.py  inference.py
omnizart/vocal/: __init__.py  app.py  inference.py  labels.py  prediction.py  test.py
omnizart/vocal_contour/: __init__.py  app.py  dataset_hdf.py  inference.py  labels.py
omnizart/vocal_frame/: __init__.py  app.py  dataset.py  dataset_hdf.py  inference.py
scripts/: create_setup.sh  download_dev_resource.sh  gdrive.sh  install.sh  predict.py  train_music.sh
tests/: test_load_label.py  test_omnizart.py  test_utils.py
tests/beat/: test_app.py
tests/chord/: test_app.py
tests/drum/: test_app.py  test_labels.py  test_prediction.py  test_utils.py
tests/feature/: test_wrapper_func.py
tests/music/: test_app.py  test_inference.py  test_labels.py  test_prediction.py  test_utils.py
tests/patch_cnn/: test_app.py
tests/resource/: drum_test_data.mid  drum_test_data.pickle  sample_feature.hdf
tests/vocal/: test_app.py
tests/vocal_contour/: test_app.py
(+100 files in other folders)
