[tool.poetry]
name = "omnizart"
version = "0.1.0"
description = ""
authors = ["BreezeWhite <freedombluewater@gmail.com>"]
license = "MIT"
homepage = "https://sites.google.com/view/mctl/home"
keywords = ["automatic music transcription", "drum transcription", "vocal transcription", "beat tracking"]
exclude = ["bootstrap_data"]

[tool.poetry.dependencies]
python = "^3.6"
setuptools = "^49.6.0"
click = "^7.1.2"
pretty_midi = "^0.2.9"
soundfile = "^0.10.3"
librosa = "^0.8.0"
keras = "^2.4.3"
tensorflow-gpu = "^2.2.0"
tensor2tensor = "^1.15.7"
llvmlite = "^0.34.0"
atari-py = "^0.2.6"
madmom = "^0.16.1"
opencv-python = "^4.4.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
pylint = "^2.5.3"
black = "^19.10b0"
numpydoc = "^1.1.0"

[tool.poetry2conda]
name = "omnizart"

[tool.poetry2conda.dependencies]
tensor2tensor = { channel = "pip" }
soundfile = { channel = "pip" }
llvmlite = { channel = "numba" }
atari-py = { channel = "pip"}
madmom = { channel = "pip"}
librosa = { channel = "pip"}
pretty_midi = { channel = "pip"}
opencv-python = { channel = "pip"}

[tool.poetry.scripts]
omnizart = 'omnizart.cli.cli:entry'

[tool.black]
line-length = 120
target-version = ['py36']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

