[tool.poetry]
name = "omnizart"
version = "0.1.0"
description = ""
authors = ["BreezeWhite <freedombluewater@gmail.com>"]
license = "MIT"
homepage = "https://sites.google.com/view/mctl/home"
keywords = ["automatic music transcription", "drum transcription", "vocal transcription", "beat tracking"]
exclude = ["bootstrap_data"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
pretty_midi = "^0.2.9"
soundfile = "^0.10.3"
librosa = "^0.8.0"
tensorflow = "^2.3.0"
madmom = "^0.16.1"
opencv-python = "^4.4.0"
pyyaml = "^5.3.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
pylint = "^2.5.3"
black = "^19.10b0"
numpydoc = "^1.1.0"
yapf = "^0.30.0"
sphinx-press-theme = "^0.5.1"

[tool.poetry.scripts]
omnizart = 'omnizart.cli.cli:entry'

[tool.black]
line-length = 120
target-version = ['py36']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

